Fix Java 8 compatibility in Deck.restock()
- Replaced Stream.toList() with collect(Collectors.toList()) to support Java 8.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>